tests/ui/impl-trait/issue-87450.stderr
warning: function cannot return without recursing
  --> $DIR/issue-87450.rs:5:1
   |
LL | fn foo() -> impl Fn() {
   | ^^^^^^^^^^^^^^^^^^^^^ cannot return without recursing
...
LL |     wrap(wrap(wrap(wrap(wrap(wrap(wrap(foo())))))))
   |                                        ----- recursive call site
   |
   = help: a `loop` may express intention better if this is on purpose
   = note: `#[warn(unconditional_recursion)]` on by default

error[E0720]: cannot resolve opaque type
  --> $DIR/issue-87450.rs:5:13
   |
LL | fn foo() -> impl Fn() {
   |             ^^^^^^^^^ recursive opaque type
...
LL |     wrap(wrap(wrap(wrap(wrap(wrap(wrap(foo())))))))
   |     ----------------------------------------------- returning here with type `impl Fn()`
...
LL | fn wrap(f: impl Fn()) -> impl Fn() {
   |                          --------- returning this opaque type `impl Fn()`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0720`.
